ipc/ipdl/test/ipdl/error/trans_WrongDirection.ipdl
protocol trans_WrongDirection {

child:
    Msg();

state S1:
    recv Msg goto S1;

};
